--- a/src/components/cards/card-holder.style.css
+++ b/src/components/cards/card-holder.style.css
@@ -1,7 +1,8 @@
-.card {
+.card-holder {
     width: 90vw;
     margin: 0 auto;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-gap: 20px;
+    margin-top: 40px;
 }
