--- a/src/components/cards/card-holder.style.css
+++ b/src/components/cards/card-holder.style.css
@@ -1,8 +1,9 @@
 .card-holder {
     width: 90vw;
-    margin: 0 auto;
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
+    margin: 40px auto;
+    display: flex;
+    flex-wrap: wrap;
+    flex-grow: 1;
+    justify-content: center;
     grid-gap: 20px;
-    margin-top: 40px;
 }
