--- a/src/components/cards/card.css
+++ b/src/components/cards/card.css
@@ -8,9 +8,10 @@
     box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
     cursor: pointer;
     transform: translateZ(0);
-    transition: transform .2s ease-in-out;
+    transition: all .2s ease-in-out;
 }
 
 .card-container:hover {
-    transform: translateY(-5px)
+    transform: translateY(-5px);
+    box-shadow: rgba(0, 0, 0, 0.45) 0px 25px 20px -20px;
 }
