--- a/src/components/cards/card.css
+++ b/src/components/cards/card.css
@@ -8,6 +8,10 @@ h3 {
     margin-top: 20px;
 }
 
+img {
+    border-radius: 8px;
+}
+
 .action {
     margin-top: 10px;
     display: flex;
@@ -26,7 +30,7 @@ h3 {
 .card-container {
     display: flex;
     flex-direction: column;
-    padding: 15px;
+    padding: 10px;
     background: rgb(235, 235, 235);
     border: 2px solid #eee;
     border-radius: 8px;
