--- a/src/components/search/search.css
+++ b/src/components/search/search.css
@@ -2,8 +2,16 @@
     border: none;
     outline: none;
     padding: 10px;
-    width: 150px;
+    width: 250px;
     line-height: 30px;
-    margin: 20px;
+    margin-top: 40px;
+    margin-bottom: 20px;
     font-size: 20px;
+    border: 1px solid rgb(218, 218, 218);
+    border-radius: 10px;
+    transition: all .25s ease-in-out;
+}
+
+.search:focus {
+    box-shadow: rgba(3, 102, 214, 0.3) 0px 0px 0px 3px;
 }
