--- a/src/components/modal/modal.css
+++ b/src/components/modal/modal.css
@@ -1,3 +1,13 @@
+.dimmed {
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    background: rgba(0, 0, 0, 0.2);
+    z-index: 200; 
+}
+
 .modal {
     position: fixed;
     width: 400px;
