--- a/src/components/modal/modal.css
+++ b/src/components/modal/modal.css
@@ -1,4 +1,4 @@
-.dimmed {
+/* .dimmed {
     position: absolute;
     left: 0;
     right: 0;
@@ -6,12 +6,12 @@
     bottom: 0;
     background: rgba(0, 0, 0, 0.2);
     z-index: 200; 
-}
+} */
 
 .modal {
     position: fixed;
     width: 400px;
-    background: rgb(187, 187, 187);
+    background: rgb(230, 230, 230);
     z-index: 100;
     top: 200px;
     left: 50%;
@@ -23,6 +23,9 @@
     align-items: center;
     padding: 20px;
     gap: 10px;
+    border: 1px solid rgba(51, 51, 51, .5);
+    border-radius:6px;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
 }
 
 input {
